--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
 
 dependencies:
   json_annotation: ^3.1.1
-  hex: ^0.1.2
+  hex:  0.2.0
   quick_log: ^1.1.3
-  http2:  0.2.0
+  http2:  ^2.2.0
   path: ^1.8.0
   azblob: ^2.0.0
   recase: "^3.0.0"
