--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   json_annotation: ^4.0.0
   hex:  0.2.0
-  quick_log: ^1.1.3
+  quick_log: 4.0.0
   http2:  ^2.2.0
   path: ^1.8.0
   azblob: ^2.0.0
